--- a/src/styles/player.css
+++ b/src/styles/player.css
@@ -1,3 +1,31 @@
 .container-player{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.container-player .play{
+    margin: 10px;
+}
+
+h3{
+    font-size: 2.6rem;
+    font-weight: 600;
+}
+
+.container-player .capa{
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    background-color: red;
+}
+
+.container-player .play a svg{
+    font-size: 3rem;
+    margin: 10px;
+    cursor: pointer;
     color: white;
 }
